fix(pane): left-align the header text

--- a/packages/components/src/css/component/Pane.module.scss
+++ b/packages/components/src/css/component/Pane.module.scss
@@ -64,6 +64,7 @@
     display: flex;
     padding: 18px 18px 0;
     gap: 15px;
+    text-align: left;
 
     &:only-child {
         padding: 18px;
